autenticacion hasta el apartado 3